Link and Image tools

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,8 +71,16 @@ body {
   }
 }
 
-
 .tiptap {
+  /* Link styles */
+  a {
+    @apply text-blue-600;
+    cursor: pointer;
+
+    &:hover {
+      @apply underline;
+    }
+  }
 
   /* Image-specific styling */
   img {
@@ -86,8 +94,8 @@ body {
     }
   }
 
-   /* Table-specific styling */
-   table {
+  /* Table-specific styling */
+  table {
     border-collapse: collapse;
     margin: 0;
     overflow: hidden;
@@ -109,15 +117,18 @@ body {
     }
 
     th {
-      background-color: #C7C7C7;
+      background-color: #c7c7c7;
       font-weight: bold;
       text-align: left;
     }
 
     .selectedCell:after {
-      background: var(#C7C7C8);
+      background: var(#c7c7c8);
       content: "";
-      left: 0; right: 0; top: 0; bottom: 0;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
       pointer-events: none;
       position: absolute;
       z-index: 2;
@@ -145,7 +156,7 @@ body {
   }
 
   /* List styles */
-  ul, 
+  ul,
   ol {
     padding: 0 1rem;
     margin: 1.25rem 1rem 1.25rem 0.4rem;
@@ -153,7 +164,7 @@ body {
 
   ul li {
     list-style-type: disc;
-  p {
+    p {
       margin-top: 0.25em;
       margin-bottom: 0.25em;
     }
@@ -167,8 +178,8 @@ body {
     }
   }
 
-   /* Task list specific styles */
-   ul[data-type="taskList"] {
+  /* Task list specific styles */
+  ul[data-type="taskList"] {
     list-style: none;
     margin-left: 0;
     padding: 0;
@@ -198,39 +209,38 @@ body {
   }
 
   /* Heading styles */
-  h1, 
-  h2, 
-  h3, 
-  h4, 
-  h5, 
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
   h6 {
     line-height: 1.1;
     margin-top: 2.5rem;
     text-wrap: pretty;
   }
 
-  h1, 
+  h1,
   h2 {
     margin-top: 3.5rem;
     margin-bottom: 1.5rem;
   }
 
-  h1 { 
-    font-size: 1.4rem; 
+  h1 {
+    font-size: 1.4rem;
   }
 
-  h2 { 
-    font-size: 1.2rem; 
+  h2 {
+    font-size: 1.2rem;
   }
 
-  h3 { 
-    font-size: 1.1rem; 
+  h3 {
+    font-size: 1.1rem;
   }
 
-  h4, 
-  h5, 
-  h6 { 
-    font-size: 1rem; 
+  h4,
+  h5,
+  h6 {
+    font-size: 1rem;
   }
-  
 }
